Deleted main.js which is same as app.js

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </a>
                     <nav role="navigation" class="nav-menu w-nav-menu">
                         <a href="/" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
-                        <a href="/episode" class="nav-link w-nav-link">Episodes</a>
+                        <a href="episode.html" class="nav-link w-nav-link">Episodes</a>
                         <div
                             data-hover="true"
                             data-delay="0"
