--- a/episode.html
+++ b/episode.html
@@ -9,14 +9,14 @@
 >
     <head>
         <meta charset="utf-8">
-        <title>Episode | Parley - Webflow HTML website template</title>
+        <title>Diplomatic Discourse Series</title>
         <meta content="Elevate your podcast with our Parley Website Template. Engage listeners, showcase episodes stylishly, and customize effortlessly. Start captivating your audience today! 🎙" name="description">
         <meta content="Episode | Parley - Webflow HTML website template" property="og:title">
         <meta content="Elevate your podcast with our Parley Website Template. Engage listeners, showcase episodes stylishly, and customize effortlessly. Start captivating your audience today! 🎙" property="og:description">
-        <meta content="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/65f8036748d05521bd927cf4_open-graph.jpg" property="og:image">
+        <meta content="assets/65f8036748d05521bd927cf4_open-graph.jpg" property="og:image">
         <meta content="Episode | Parley - Webflow HTML website template" property="twitter:title">
         <meta content="Elevate your podcast with our Parley Website Template. Engage listeners, showcase episodes stylishly, and customize effortlessly. Start captivating your audience today! 🎙" property="twitter:description">
-        <meta content="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/65f8036748d05521bd927cf4_open-graph.jpg" property="twitter:image">
+        <meta content="assets/65f8036748d05521bd927cf4_open-graph.jpg" property="twitter:image">
         <meta property="og:type" content="website">
         <meta content="summary_large_image" name="twitter:card">
         <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -53,58 +53,64 @@
             role="banner"
             class="navbar w-nav"
         >
-            <div class="w-layout-blockcontainer container-full w-container">
-                <div class="w-layout-grid grid-navbar">
-                    <a href="/" id="w-node-bc339dbc-2a59-0847-4b81-c02c2ccf17b4-2ccf17b1" class="brand-wrap w-nav-brand">
-                        <img
-                            src="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/65d72a68240bed2bab3ed3ce_parley.svg"
-                            loading="eager"
-                            alt="Parley logo"
-                            class="brand"
-                        >
-                    </a>
-                    <nav role="navigation" class="nav-menu w-nav-menu">
-                        <a href="/" class="nav-link w-nav-link">Home</a>
-                        <a href="/episode" aria-current="page" class="nav-link w-nav-link w--current">Episodes</a>
-                        <div
-                            data-hover="true"
-                            data-delay="0"
-                            data-w-id="bc339dbc-2a59-0847-4b81-c02c2ccf17bb"
-                            class="dropdown w-dropdown"
-                        >
-                            <div class="dropdown-toggle nav-link w-dropdown-toggle">
-                                <div>Pages</div>
-                                <div class="dropdown-image w-icon-dropdown-toggle"></div>
-                            </div>
-                            <nav class="dropdown-list w-dropdown-list">
-                                <a href="/" class="dropdown-link w-dropdown-link">Home</a>
-                                <a href="/home-2" class="dropdown-link w-dropdown-link">Home 2</a>
-                                <a href="/episode" aria-current="page" class="dropdown-link w-dropdown-link w--current">Episode</a>
-                                <a href="/guest" class="dropdown-link w-dropdown-link">Guest</a>
-                                <a href="/about" class="dropdown-link w-dropdown-link">About</a>
-                                <a href="/sponsors" class="dropdown-link w-dropdown-link">Sponsors</a>
-                                <a href="/blog" class="dropdown-link w-dropdown-link">Blog</a>
-                                <a href="/contact" class="dropdown-link w-dropdown-link">Contact</a>
-                            </nav>
+        <div class="w-layout-blockcontainer container-full w-container">
+            <div class="w-layout-grid grid-navbar">
+                <a
+                    href="/"
+                    id="w-node-bc339dbc-2a59-0847-4b81-c02c2ccf17b4-2ccf17b1"
+                    aria-current="page"
+                    class="brand-wrap w-nav-brand w--current"
+                >
+                    <img
+                        src="imgs/logo.png"
+                        loading="eager"
+                        alt="PPGS logo"
+                        class="brand"
+                    >
+                </a>
+                <nav role="navigation" class="nav-menu w-nav-menu">
+                    <a href="/" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
+                    <a href="episode.html" class="nav-link w-nav-link">Episodes</a>
+                    <div
+                        data-hover="true"
+                        data-delay="0"
+                        data-w-id="bc339dbc-2a59-0847-4b81-c02c2ccf17bb"
+                        class="dropdown w-dropdown"
+                    >
+                        <div class="dropdown-toggle nav-link w-dropdown-toggle">
+                            <div>Pages</div>
+                            <div class="dropdown-image w-icon-dropdown-toggle"></div>
                         </div>
-                        <a href="/contact" class="nav-link w-nav-link">Contact</a>
-                    </nav>
-                    <div id="w-node-bc339dbc-2a59-0847-4b81-c02c2ccf17d1-2ccf17b1" class="nav-right">
-                        <a href="#subscribe" class="button-icon-inline w-inline-block">
-                            <div class="button-icon-wrap">
-                                <img
-                                    src="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/6597794e3238bf3fe8055ac9_button-icon-01.svg"
-                                    loading="eager"
-                                    alt="Button icon 01"
-                                    class="button-icon"
-                                >
-                            </div>
-                            <div>Subscribe</div>
-                        </a>
+                        <nav class="dropdown-list w-dropdown-list">
+                            <a href="/" aria-current="page" class="dropdown-link w-dropdown-link w--current">Home</a>
+                            <a href="https://ppgsiitkgp.in/" class="dropdown-link w-dropdown-link">Home 2</a>
+                            <a href="https://ppgsiitkgp.in/upsc" class="dropdown-link w-dropdown-link">UPSC CSE</a>
+                            <a href="https://ppgsiitkgp.in/mentorship" class="dropdown-link w-dropdown-link">Mentorship Program</a>
+                            <a href="https://ppgsiitkgp.in/policy" class="dropdown-link w-dropdown-link">Policy Research</a>
+                            <a href="https://ppgsiitkgp.in/internship" class="dropdown-link w-dropdown-link">Internship Program</a>
+                            <a href="https://ppgsiitkgp.in/insight" class="dropdown-link w-dropdown-link">Insight Ignite</a>
+                            <a href="https://ppgsiitkgp.in/lbc" class="dropdown-link w-dropdown-link">LBC Program</a>
+                            <a href="https://ppgsiitkgp.in/ca" class="dropdown-link w-dropdown-link">Campus Representative</a>
+                            <a href="https://ppgsiitkgp.in/article" class="dropdown-link w-dropdown-link">Blogs</a>
+                        </nav>
                     </div>
-                    <div id="w-node-bc339dbc-2a59-0847-4b81-c02c2ccf17dd-2ccf17b1" class="menu-button w-nav-button">
-                        <div class="menu-button-icon w-icon-nav-menu"></div>
-                    </div>
+                    <!-- <a href="/contact" class="nav-link w-nav-link">Contact</a> -->
+                </nav>
+                <!-- <div id="w-node-bc339dbc-2a59-0847-4b81-c02c2ccf17d1-2ccf17b1" class="nav-right">
+                    <a href="#subscribe" class="button-icon-inline w-inline-block">
+                        <div class="button-icon-wrap">
+                            <img
+                                src="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/6597794e3238bf3fe8055ac9_button-icon-01.svg"
+                                loading="eager"
+                                alt="Button icon 01"
+                                class="button-icon"
+                            >
+                        </div>
+                        <div>Subscribe</div>
+                    </a>
+                </div> -->
+                <div id="w-node-bc339dbc-2a59-0847-4b81-c02c2ccf17dd-2ccf17b1" class="menu-button w-nav-button">
+                    <div class="menu-button-icon w-icon-nav-menu"></div>
                 </div>
             </div>
         </div>
