edited some links

--- a/episode.html
+++ b/episode.html
@@ -83,15 +83,15 @@
                         </div>
                         <nav class="dropdown-list w-dropdown-list">
                             <a href="/" aria-current="page" class="dropdown-link w-dropdown-link w--current">Home</a>
-                            <a href="https://ppgsiitkgp.in/" class="dropdown-link w-dropdown-link">Home 2</a>
-                            <a href="https://ppgsiitkgp.in/upsc" class="dropdown-link w-dropdown-link">UPSC CSE</a>
-                            <a href="https://ppgsiitkgp.in/mentorship" class="dropdown-link w-dropdown-link">Mentorship Program</a>
-                            <a href="https://ppgsiitkgp.in/policy" class="dropdown-link w-dropdown-link">Policy Research</a>
-                            <a href="https://ppgsiitkgp.in/internship" class="dropdown-link w-dropdown-link">Internship Program</a>
-                            <a href="https://ppgsiitkgp.in/insight" class="dropdown-link w-dropdown-link">Insight Ignite</a>
-                            <a href="https://ppgsiitkgp.in/lbc" class="dropdown-link w-dropdown-link">LBC Program</a>
-                            <a href="https://ppgsiitkgp.in/ca" class="dropdown-link w-dropdown-link">Campus Representative</a>
-                            <a href="https://ppgsiitkgp.in/article" class="dropdown-link w-dropdown-link">Blogs</a>
+                            <a href="https://ppgsiitkgp.in/" target="_blank" class="dropdown-link w-dropdown-link">Home 2</a>
+                            <a href="https://ppgsiitkgp.in/upsc" target="_blank" class="dropdown-link w-dropdown-link">UPSC CSE</a>
+                            <a href="https://ppgsiitkgp.in/mentorship" target="_blank" class="dropdown-link w-dropdown-link">Mentorship Program</a>
+                            <a href="https://ppgsiitkgp.in/policy" target="_blank" class="dropdown-link w-dropdown-link">Policy Research</a>
+                            <a href="https://ppgsiitkgp.in/internship" target="_blank" class="dropdown-link w-dropdown-link">Internship Program</a>
+                            <a href="https://ppgsiitkgp.in/insight" target="_blank" class="dropdown-link w-dropdown-link">Insight Ignite</a>
+                            <a href="https://ppgsiitkgp.in/lbc" target="_blank" class="dropdown-link w-dropdown-link">LBC Program</a>
+                            <a href="https://ppgsiitkgp.in/ca" target="_blank" class="dropdown-link w-dropdown-link">Campus Representative</a>
+                            <a href="https://ppgsiitkgp.in/article" target="_blank" class="dropdown-link w-dropdown-link">Blogs</a>
                         </nav>
                     </div>
                     <!-- <a href="/contact" class="nav-link w-nav-link">Contact</a> -->
