--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
                             </div>
                             <nav class="dropdown-list w-dropdown-list">
                                 <a href="/" aria-current="page" class="dropdown-link w-dropdown-link w--current">Home</a>
-                                <a href="https://ppgsiitkgp.in/" class="dropdown-link w-dropdown-link">Home 2</a>
-                                <a href="https://ppgsiitkgp.in/upsc" class="dropdown-link w-dropdown-link">UPSC CSE</a>
-                                <a href="https://ppgsiitkgp.in/mentorship" class="dropdown-link w-dropdown-link">Mentorship Program</a>
-                                <a href="https://ppgsiitkgp.in/policy" class="dropdown-link w-dropdown-link">Policy Research</a>
-                                <a href="https://ppgsiitkgp.in/internship" class="dropdown-link w-dropdown-link">Internship Program</a>
-                                <a href="https://ppgsiitkgp.in/insight" class="dropdown-link w-dropdown-link">Insight Ignite</a>
-                                <a href="https://ppgsiitkgp.in/lbc" class="dropdown-link w-dropdown-link">LBC Program</a>
-                                <a href="https://ppgsiitkgp.in/ca" class="dropdown-link w-dropdown-link">Campus Representative</a>
-                                <a href="https://ppgsiitkgp.in/article" class="dropdown-link w-dropdown-link">Blogs</a>
+                                <a href="https://ppgsiitkgp.in/" target="_blank" class="dropdown-link w-dropdown-link">Home 2</a>
+                                <a href="https://ppgsiitkgp.in/upsc" target="_blank" class="dropdown-link w-dropdown-link">UPSC CSE</a>
+                                <a href="https://ppgsiitkgp.in/mentorship" target="_blank" class="dropdown-link w-dropdown-link">Mentorship Program</a>
+                                <a href="https://ppgsiitkgp.in/policy" target="_blank" class="dropdown-link w-dropdown-link">Policy Research</a>
+                                <a href="https://ppgsiitkgp.in/internship" target="_blank" class="dropdown-link w-dropdown-link">Internship Program</a>
+                                <a href="https://ppgsiitkgp.in/insight" target="_blank" class="dropdown-link w-dropdown-link">Insight Ignite</a>
+                                <a href="https://ppgsiitkgp.in/lbc" target="_blank" class="dropdown-link w-dropdown-link">LBC Program</a>
+                                <a href="https://ppgsiitkgp.in/ca" target="_blank" class="dropdown-link w-dropdown-link">Campus Representative</a>
+                                <a href="https://ppgsiitkgp.in/article" target="_blank" class="dropdown-link w-dropdown-link">Blogs</a>
                             </nav>
                         </div>
                         <!-- <a href="/contact" class="nav-link w-nav-link">Contact</a> -->
@@ -489,7 +489,7 @@
                     <div role="list" class="grid-latest-podcast w-dyn-items">
                         <div role="listitem" class="w-dyn-item">
                             <div data-w-id="f14257fc-351c-bc9f-de2b-97ed3fa2babf" class="latest-podcast-item">
-                                <a id="w-node-_89529031-7e13-36e6-1f7d-f7ead4b1a655-f6644bbc" href="/episode/everything-i-know-so-far-on-ui-ux" class="latest-podcast-image-wrap w-inline-block">
+                                <a id="w-node-_89529031-7e13-36e6-1f7d-f7ead4b1a655-f6644bbc" href="https://ppgsiitkgp.in/blog/dds_india-thailand-ties" target="_blank" class="latest-podcast-image-wrap w-inline-block">
                                     <img
                                         alt=""
                                         loading="eager"
@@ -511,10 +511,9 @@
                                         <div>Episode</div>
                                         <div class="latest-podcast-number-value">1</div>
                                     </div>
-                                    <a href="/episode/everything-i-know-so-far-on-ui-ux" class="latest-podcast-title-link">India-Thailand Ties Interview</a>
+                                    <a href="https://ppgsiitkgp.in/blog/dds_india-thailand-ties" target="_blank" class="latest-podcast-title-link">India-Thailand Ties Interview</a>
                                     <div class="latest-podcast-host-wrap">
                                         <div>Exclusive Eye-Opening Interview:Secrets of India Thailand Relations</div>
-                                        <a href="/host/billy-vasquez" class="latest-podcast-host"></a>
                                     </div>
                                     <div class="latest-podcast-duration-wrap">
                                         <!--<img
@@ -532,7 +531,7 @@
                         </div>
                         <div role="listitem" class="w-dyn-item">
                             <div data-w-id="f14257fc-351c-bc9f-de2b-97ed3fa2babf" class="latest-podcast-item">
-                                <a id="w-node-_89529031-7e13-36e6-1f7d-f7ead4b1a655-f6644bbc" href="/episode/design-problems-animation-can-answer" class="latest-podcast-image-wrap w-inline-block">
+                                <a id="w-node-_89529031-7e13-36e6-1f7d-f7ead4b1a655-f6644bbc" href="https://ppgsiitkgp.in/blog/dds_india-bhutan" target="_blank" class="latest-podcast-image-wrap w-inline-block">
                                     <img
                                         alt=""
                                         loading="eager"
@@ -554,7 +553,7 @@
                                         <div>Episode</div>
                                         <div class="latest-podcast-number-value">2</div>
                                     </div>
-                                    <a href="/episode/design-problems-animation-can-answer" class="latest-podcast-title-link">Secrets of India-Bhutan Relations </a>
+                                    <a href="https://ppgsiitkgp.in/blog/dds_india-bhutan" target="_blank" class="latest-podcast-title-link">Secrets of India-Bhutan Relations </a>
                                     <div class="latest-podcast-host-wrap">
                                         <div>Swami Vivekananda was largely responsible for the spread of yoga to western societies. It was more focused on..</div>
                                         <a href="/host/billy-vasquez" class="latest-podcast-host"></a>
@@ -968,19 +967,12 @@
                                                     </a>
                                                     <a href="#" class="guest-title">Mr. Pichaya Lapasthamrong</a>
                                                     <div class="guest-social-item-wrap">
-                                                        <a href="#" class="social-link w-inline-block w-condition-invisible">
-                                                            <img
-                                                                src="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/659782af90cd4a4f147189a3_facebook.svg"
-                                                                loading="eager"
-                                                                alt="Facebook icon"
-                                                                class="social-icon"
-                                                            >
                                                         </a>
-                                                        <a href="https://www.instagram.com" target="_blank" class="social-link w-inline-block">
+                                                        <a href="https://www.linkedin.com/in/pichaya-lapasthamrong-bb839974/?originalSubdomain=jo" target="_blank" class="social-link w-inline-block">
                                                             <img
-                                                                src="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/659782e8fb8e2b5767efca50_instagram.svg"
+                                                                src="imgs/icons8-linkedin-60.png"
                                                                 loading="eager"
-                                                                alt="Instagram icon"
+                                                                alt="linkedin icon"
                                                                 class="social-icon"
                                                             >
                                                         </a>
@@ -988,7 +980,7 @@
                                                             <img
                                                                 src="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/65a62aacd613b0ff4196d7c8_twitter.svg"
                                                                 loading="eager"
-                                                                alt="Twitter icon"
+                                                                alt=" icon"
                                                                 class="social-icon"
                                                             >
                                                         </a>
@@ -1016,7 +1008,7 @@
                                                     </a>
                                                     <a href="#" class="guest-title">Ms. Kezang Dema</a>
                                                     <div class="guest-social-item-wrap">
-                                                        <a href="https://facebook.com" target="_blank" class="social-link w-inline-block">
+                                                        <a href="tel:+91 7980108757" target="_blank" class="social-link w-inline-block">
                                                             <img
                                                                 src="imgs/call_icon.png"
                                                                 loading="eager"
@@ -1375,7 +1367,7 @@
                                     src="imgs/icons8-linkedin-60.png"
                                     style="width: 40px;height: 40px;"
                                     loading="eager"
-                                    alt="Twitter icon"
+                                    alt="linkedin icon"
                                     class="social-icon"
                                 >
                             </a>
