Edited heading and description and removed home2

--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
                             </div>
                             <nav class="dropdown-list w-dropdown-list">
                                 <a href="/" aria-current="page" class="dropdown-link w-dropdown-link w--current">Home</a>
-                                <a href="https://ppgsiitkgp.in/" target="_blank" class="dropdown-link w-dropdown-link">Home 2</a>
                                 <a href="https://ppgsiitkgp.in/upsc" target="_blank" class="dropdown-link w-dropdown-link">UPSC CSE</a>
                                 <a href="https://ppgsiitkgp.in/mentorship" target="_blank" class="dropdown-link w-dropdown-link">Mentorship Program</a>
                                 <a href="https://ppgsiitkgp.in/policy" target="_blank" class="dropdown-link w-dropdown-link">Policy Research</a>
@@ -128,16 +127,16 @@
         <section class="hero-section-split">
             <div class="w-layout-blockcontainer container-full w-container">
                 <div class="hero-content-wrap">
-                    <h1 class="hero-title">Podcast is
-                        <span class="hero-title-inner-left">streaming</span>
+                    <h1 class="hero-title">DIPLOMATIC DISCOURSE 
+                        <span class="hero-title-inner-left">SERIES</span>
                     </h1>
                     <div class="grid-hero-content-inner">
                         <div class="hero-content-left">
-                            <h2 class="heading-h4">Interviews with top thinkers, founders, and artists since 2012. 1M+ downloads.</h2>
+                            <h2 class="heading-h4">An Innovative Initiative fostering mutual understanding and knowledge exchange between Young minds and the Diplomatic community.</h2>
                             <div class="w-dyn-list">
                                 <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
-                                        <a href="/episode/everything-i-know-so-far-on-ui-ux" class="button-icon-inline w-inline-block">
+                                        <a href="#interview-section" class="button-icon-inline w-inline-block">
                                             <div class="button-icon-wrap">
                                                 <img
                                                     src="assets/65979d8ef547340401991b10_button-icon-02.svg"
@@ -146,7 +145,7 @@
                                                     class="button-icon button-play-icon"
                                                 >
                                             </div>
-                                            <div>Latest episode</div>
+                                            <div>Latest Interview</div>
                                         </a>
                                     </div>
                                 </div>
@@ -469,10 +468,10 @@
                 class="marquee-decoration-bottom"
             >
         </div>
-        <section data-w-id="41fa1809-fcda-da1b-7a42-0b779a309192" style="opacity:0" class="latest-podcast-section section-spacing">
+        <section data-w-id="41fa1809-fcda-da1b-7a42-0b779a309192" style="opacity:0" class="latest-podcast-section section-spacing" id="interview-section">
             <div class="w-layout-blockcontainer container-full w-container">
                 <div class="section-title section-title-inline">
-                    <h2 class="no-margin">Latest podcast</h2>
+                    <h2 class="no-margin">Latest Interviews</h2>
                     <a href="/episode" class="button-icon-inline w-inline-block">
                         <div class="button-icon-wrap">
                             <img
@@ -482,7 +481,7 @@
                                 class="button-icon"
                             >
                         </div>
-                        <div>View all episodes</div>
+                        <div>View all interviews</div>
                     </a>
                 </div>
                 <div class="w-dyn-list">
