--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. https://webflow.com -->
-<!-- Last Published: Mon Mar 18 2024 09:08:17 GMT+0000 (Coordinated Universal Time) -->
 <html
     data-wf-domain="parley-wbs.webflow.io"
     data-wf-page="6596a58563932b0bf6644bbc"
@@ -92,7 +90,7 @@
                                 <div class="dropdown-image w-icon-dropdown-toggle"></div>
                             </div>
                             <nav class="dropdown-list w-dropdown-list">
-                                <a href="/" aria-current="page" class="dropdown-link w-dropdown-link w--current">Home</a>
+                                <a href="https://ppgsiitkgp.in/" target="_blank" aria-current="page" class="dropdown-link w-dropdown-link w--current">Home</a>
                                 <a href="https://ppgsiitkgp.in/upsc" target="_blank" class="dropdown-link w-dropdown-link">UPSC CSE</a>
                                 <a href="https://ppgsiitkgp.in/mentorship" target="_blank" class="dropdown-link w-dropdown-link">Mentorship Program</a>
                                 <a href="https://ppgsiitkgp.in/policy" target="_blank" class="dropdown-link w-dropdown-link">Policy Research</a>
@@ -755,7 +753,7 @@
                             src="imgs/Diplomacy_img.avif"
                             loading="eager"
                             sizes="(max-width: 767px) 92vw, (max-width: 1279px) 94vw, 999.9999389648438px"
-                            srcset="https://img.freepik.com/free-vector/diplomacy-diplomat-isometric-concept-two-men-discussing-important-political-issues-vector-illustration_1284-78093.jpg 1000w 500w, https://img.freepik.com/free-vector/diplomacy-diplomat-isometric-concept-two-men-discussing-important-political-issues-vector-illustration_1284-78093.jpg 1000w"
+                            srcset="imgs/Diplomacy_img.avif 1000w 500w, imgs/Diplomacy_img.avif 1000w"
                             alt="About image 01"
                             class="image-image-left"
                         >
@@ -779,7 +777,7 @@
                             alt=""
                             class="about-dec-top"
                         >
-                        <h2>Crafting thoughts as a team</h2>
+                        <h2>Bridging Young Minds and Diplomacy</h2>
                         <p class="about-split-description">
                             The Public Policy and Governance Society at the Indian Institute of Technology Kharagpur presents its unique Diplomatic Discourse Series, an innovative initiative fostering mutual understanding and knowledge exchange between young minds and the diplomatic community.
                         </p>
@@ -969,20 +967,20 @@
                                                         </a>
                                                         <a href="https://www.linkedin.com/in/pichaya-lapasthamrong-bb839974/?originalSubdomain=jo" target="_blank" class="social-link w-inline-block">
                                                             <img
-                                                                src="imgs/icons8-linkedin-60.png"
+                                                                src="imgs/linkedin-blue-logo-icon.png"
                                                                 loading="eager"
                                                                 alt="linkedin icon"
                                                                 class="social-icon"
                                                             >
                                                         </a>
-                                                        <a href="https://twitter.com" target="_blank" class="social-link w-inline-block">
+                                                        <!-- <a href="https://twitter.com" target="_blank" class="social-link w-inline-block">
                                                             <img
                                                                 src="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/65a62aacd613b0ff4196d7c8_twitter.svg"
                                                                 loading="eager"
                                                                 alt=" icon"
                                                                 class="social-icon"
                                                             >
-                                                        </a>
+                                                        </a> -->
                                                     </div>
                                                 </div>
                                             </div>
@@ -1029,45 +1027,37 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <div class="guest-slide w-slide">
+                                <div class="guest-slide w-slide">
                                     <div class="guest-slide-collection-list-wrapper w-dyn-list">
                                         <div role="list" class="guest-slide-collection-list w-dyn-items">
                                             <div role="listitem" class="guest-slide-collection-item w-dyn-item">
                                                 <div data-w-id="b2cc20c7-bfc6-8ffa-8e26-2f01fef87c6a" class="guest-item">
-                                                    <a aria-label="link" href="/guest/lori-stevens" class="guest-image-wrap w-inline-block">
+                                                    <a aria-label="link" href="#" class="guest-image-wrap w-inline-block">
                                                         <img
                                                             alt=""
                                                             loading="eager"
                                                             style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
-                                                            src="https://assets-global.website-files.com/6597b28e893a2d5b1401c5b9/65a7b3d587ead3d11fb07157_guest-03.jpg"
+                                                            src="imgs/Mr. Vohra.jpeg"
                                                             sizes="(max-width: 479px) 149.99998474121094px, (max-width: 767px) 31vw, (max-width: 991px) 179.994140625px, 219.99122619628906px"
-                                                            srcset="https://assets-global.website-files.com/6597b28e893a2d5b1401c5b9/65a7b3d587ead3d11fb07157_guest-03-p-500.jpg 500w, https://assets-global.website-files.com/6597b28e893a2d5b1401c5b9/65a7b3d587ead3d11fb07157_guest-03.jpg 770w"
+                                                            srcset="imgs/Mr. Vohra.jpeg 500w, imgs/Mr. Vohra.jpeg 770w"
                                                             class="guest-image"
                                                         >
                                                     </a>
-                                                    <a href="/guest/lori-stevens" class="guest-title">Lori Stevens</a>
+                                                    <a href="#" class="guest-title">Mr. Deepak Vohra</a>
                                                     <div class="guest-social-item-wrap">
-                                                        <a href="https://facebook.com" target="_blank" class="social-link w-inline-block">
+                                                        <a href="https://www.linkedin.com/in/deepak-vohra-925835160/?originalSubdomain=in" target="_blank" class="social-link w-inline-block">
                                                             <img
-                                                                src="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/659782af90cd4a4f147189a3_facebook.svg"
+                                                                src="imgs/linkedin-blue-logo-icon.png"
                                                                 loading="eager"
-                                                                alt="Facebook icon"
+                                                                alt="linkedin icon"
                                                                 class="social-icon"
                                                             >
                                                         </a>
-                                                        <a href="https://www.instagram.com" target="_blank" class="social-link w-inline-block">
+                                                        <a href="mailto:deepak@svpnpa.gov.in" target="_blank" class="social-link w-inline-block">
                                                             <img
-                                                                src="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/659782e8fb8e2b5767efca50_instagram.svg"
+                                                                src="imgs/mail.webp"
                                                                 loading="eager"
-                                                                alt="Instagram icon"
-                                                                class="social-icon"
-                                                            >
-                                                        </a>
-                                                        <a href="https://twitter.com" target="_blank" class="social-link w-inline-block">
-                                                            <img
-                                                                src="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/65a62aacd613b0ff4196d7c8_twitter.svg"
-                                                                loading="eager"
-                                                                alt="Twitter icon"
+                                                                alt="Mail icon"
                                                                 class="social-icon"
                                                             >
                                                         </a>
@@ -1077,7 +1067,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="guest-slide w-slide">
+                                <!-- <div class="guest-slide w-slide">
                                     <div class="guest-slide-collection-list-wrapper w-dyn-list">
                                         <div role="list" class="guest-slide-collection-list w-dyn-items">
                                             <div role="listitem" class="guest-slide-collection-item w-dyn-item">
@@ -1385,7 +1375,7 @@
                         <div class="footer-item-wrap">
                             <h6 class="footer-item-title">Pages</h6>
                             <div class="grid-footer-link-inner">
-                                <a href="/" aria-current="page" class="footer-simple-link w--current">Home</a>
+                                <a href="https://ppgsiitkgp.in" aria-current="page" class="footer-simple-link w--current">Home</a>
                                 <a href="episode.html" class="footer-simple-link">Episode</a>
                                 <a href="https://ppgsiitkgp.in/upsc" class="footer-simple-link">UPSC CSE</a>
                                 <a href="https://ppgsiitkgp.in/mentorship" class="footer-simple-link">Mentorship Program</a>
