--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
         }(window, document);
         </script>
-        <link href="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/65b33a331ee6dff9cd96b23a_favicon.png" rel="shortcut icon" type="image/x-icon">
-        <link href="https://assets-global.website-files.com/6596a58563932b0bf6644bc5/65b33a35996da28bcff97703_webclip.png" rel="apple-touch-icon">
+        <link href="imgs/logo.png" rel="shortcut icon" type="image/x-icon">
+        <link href="imgs/logo.png" rel="apple-touch-icon">
     </head>
     <body>
         <div
@@ -486,7 +486,7 @@
                     <div role="list" class="grid-latest-podcast w-dyn-items">
                         <div role="listitem" class="w-dyn-item">
                             <div data-w-id="f14257fc-351c-bc9f-de2b-97ed3fa2babf" class="latest-podcast-item">
-                                <a id="w-node-_89529031-7e13-36e6-1f7d-f7ead4b1a655-f6644bbc" href="https://ppgsiitkgp.in/blog/dds_india-thailand-ties" target="_blank" class="latest-podcast-image-wrap w-inline-block">
+                                <a id="w-node-_89529031-7e13-36e6-1f7d-f7ead4b1a655-f6644bbc" href="https://youtu.be/qH6MmJCarcU?si=yMR9keS7ujkRd_7n" target="_blank" class="latest-podcast-image-wrap w-inline-block">
                                     <img
                                         alt=""
                                         loading="eager"
@@ -508,12 +508,12 @@
                                         <div>Episode</div>
                                         <div class="latest-podcast-number-value">1</div>
                                     </div>
-                                    <a href="https://ppgsiitkgp.in/blog/dds_india-thailand-ties" target="_blank" class="latest-podcast-title-link">India-Thailand Ties Interview</a>
+                                    <a href="https://youtu.be/qH6MmJCarcU?si=yMR9keS7ujkRd_7n" target="_blank" class="latest-podcast-title-link">India-Thailand Ties Interview</a>
                                     <div class="latest-podcast-host-wrap">
                                         <div>Exclusive Eye-Opening Interview:Secrets of India Thailand Relations</div>
                                     </div>
                                     <div class="latest-podcast-duration-wrap">
-                                        <!--<img
+                                        <img
                                             src="assets/6597cc6fcfc5fa33fe570ead_count-icon.svg"
                                             loading="eager"
                                             width="15"
@@ -521,7 +521,49 @@
                                             alt="Count icon"
                                             class="latest-podcast-duration-icon"
                                         >
-                                        <div class="latest-podcast-duration">2hr 23min</div>-->
+                                        <div class="latest-podcast-duration">49 min</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div role="listitem" class="w-dyn-item">
+                            <div data-w-id="f14257fc-351c-bc9f-de2b-97ed3fa2babf" class="latest-podcast-item">
+                                <a id="w-node-_89529031-7e13-36e6-1f7d-f7ead4b1a655-f6644bbc" href="https://youtu.be/O8rcuxkHXVY?si=QL3f2sFFQ7e6xStZ" target="_blank" class="latest-podcast-image-wrap w-inline-block">
+                                    <img
+                                        alt=""
+                                        loading="eager"
+                                        src="imgs/dds_ep3.jpeg"
+                                        sizes="(max-width: 479px) 100vw, (max-width: 767px) 87vw, (max-width: 991px) 90vw, (max-width: 1279px) 43vw, (max-width: 1439px) 16vw, 20vw"
+                                        srcset="imgs/dds_ep3.jpeg 500w, imgs/dds_ep3.jpeg 770w"
+                                        class="latest-podcast-image"
+                                    >
+                                    <img
+                                        src="assets/6597d25fc49a589544fdcfcd_dusk-dec.png"
+                                        loading="eager"
+                                        data-w-id="cd26de70-dc11-0599-aa68-0af967dfaac2"
+                                        alt="Dusk dec"
+                                        class="latest-podcast-disk-image"
+                                    >
+                                </a>
+                                <div class="latest-podcast-info">
+                                    <div class="latest-podcast-number-wrap">
+                                        <div>Episode</div>
+                                        <div class="latest-podcast-number-value">2</div>
+                                    </div>
+                                    <a href="https://youtu.be/O8rcuxkHXVY?si=QL3f2sFFQ7e6xStZ" target="_blank" class="latest-podcast-title-link">Insights into the Indian Foreign Service</a>
+                                    <div class="latest-podcast-host-wrap">
+                                        <div>Unfiltered Opinions: Honest Takeaways from the Ambassador Deepak Vohra</div>
+                                    </div>
+                                    <div class="latest-podcast-duration-wrap">
+                                        <img
+                                            src="assets/6597cc6fcfc5fa33fe570ead_count-icon.svg"
+                                            loading="eager"
+                                            width="15"
+                                            height="15"
+                                            alt="Count icon"
+                                            class="latest-podcast-duration-icon"
+                                        >
+                                        <div class="latest-podcast-duration">29 min</div>
                                     </div>
                                 </div>
                             </div>
@@ -548,7 +590,7 @@
                                 <div class="latest-podcast-info">
                                     <div class="latest-podcast-number-wrap">
                                         <div>Episode</div>
-                                        <div class="latest-podcast-number-value">2</div>
+                                        <div class="latest-podcast-number-value">3</div>
                                     </div>
                                     <a href="https://ppgsiitkgp.in/blog/dds_india-bhutan" target="_blank" class="latest-podcast-title-link">Secrets of India-Bhutan Relations </a>
                                     <div class="latest-podcast-host-wrap">
@@ -569,50 +611,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!--<div role="listitem" class="w-dyn-item">
-                            <div data-w-id="f14257fc-351c-bc9f-de2b-97ed3fa2babf" class="latest-podcast-item">
-                                <a id="w-node-_89529031-7e13-36e6-1f7d-f7ead4b1a655-f6644bbc" href="/episode/your-only-challenge-is-to-focus" class="latest-podcast-image-wrap w-inline-block">
-                                    <img
-                                        alt=""
-                                        loading="eager"
-                                        src="assets/65a7af262166904f446eb374_podcast-03.jpg"
-                                        sizes="(max-width: 479px) 100vw, (max-width: 767px) 87vw, (max-width: 991px) 90vw, (max-width: 1279px) 43vw, (max-width: 1439px) 16vw, 20vw"
-                                        srcset="assets/65a7af262166904f446eb374_podcast-03-p-500.jpg 500w, assets/65a7af262166904f446eb374_podcast-03.jpg 770w"
-                                        class="latest-podcast-image"
-                                    >
-                                    <img
-                                        src="assets/6597d25fc49a589544fdcfcd_dusk-dec.png"
-                                        loading="eager"
-                                        data-w-id="cd26de70-dc11-0599-aa68-0af967dfaac2"
-                                        alt="Dusk dec"
-                                        class="latest-podcast-disk-image"
-                                    >
-                                </a>
-                                <div class="latest-podcast-info">
-                                    <div class="latest-podcast-number-wrap">
-                                        <div>Episode</div>
-                                        <div class="latest-podcast-number-value">7</div>
-                                    </div>
-                                    <a href="/episode/your-only-challenge-is-to-focus" class="latest-podcast-title-link">Your only challenge is to focus</a>
-                                    <div class="latest-podcast-host-wrap">
-                                        <div>By</div>
-                                        <a href="/host/billy-vasquez" class="latest-podcast-host">Billy Vasquez</a>
-                                    </div>
-                                    <div class="latest-podcast-duration-wrap">
-                                        <img
-                                            src="assets/6597cc6fcfc5fa33fe570ead_count-icon.svg"
-                                            loading="eager"
-                                            width="15"
-                                            height="15"
-                                            alt="Count icon"
-                                            class="latest-podcast-duration-icon"
-                                        >
-                                        <div class="latest-podcast-duration">1hr 50min</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div role="listitem" class="w-dyn-item">
+                        <!-- <div role="listitem" class="w-dyn-item">
                             <div data-w-id="f14257fc-351c-bc9f-de2b-97ed3fa2babf" class="latest-podcast-item">
                                 <a id="w-node-_89529031-7e13-36e6-1f7d-f7ead4b1a655-f6644bbc" href="/episode/webflow-to-launch-a-life-changing-startup" class="latest-podcast-image-wrap w-inline-block">
                                     <img
@@ -991,46 +990,6 @@
                                     <div class="guest-slide-collection-list-wrapper w-dyn-list">
                                         <div role="list" class="guest-slide-collection-list w-dyn-items">
                                             <div role="listitem" class="guest-slide-collection-item w-dyn-item">
-                                                <div data-w-id="bc8187a3-6429-ef99-f235-ab725282be00" class="guest-item">
-                                                    <a aria-label="link" href="#" class="guest-image-wrap w-inline-block">
-                                                        <img
-                                                            alt=""
-                                                            loading="eager"
-                                                            style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
-                                                            src="imgs/unknown.png"
-                                                            sizes="(max-width: 479px) 149.99998474121094px, (max-width: 767px) 31vw, (max-width: 991px) 179.994140625px, 219.99122619628906px"
-                                                            srcset="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnpH8yq1vrLIpt1g0QG-pW6lId-vQ1nOEy4Q&s 500w, https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnpH8yq1vrLIpt1g0QG-pW6lId-vQ1nOEy4Q&s 770w"
-                                                            class="guest-image"
-                                                        >
-                                                    </a>
-                                                    <a href="#" class="guest-title">Ms. Kezang Dema</a>
-                                                    <div class="guest-social-item-wrap">
-                                                        <a href="tel:+91 7980108757" target="_blank" class="social-link w-inline-block">
-                                                            <img
-                                                                src="imgs/call_icon.png"
-                                                                loading="eager"
-                                                                alt="Call icon"
-                                                                class="social-icon"
-                                                            >
-                                                        </a>
-                                                        <a href="mailto:kezangd@mfa.gov.bt" target="_blank" class="social-link w-inline-block">
-                                                            <img
-                                                                src="imgs/mail.webp"
-                                                                loading="eager"
-                                                                alt="Mail icon"
-                                                                class="social-icon"
-                                                            >
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="guest-slide w-slide">
-                                    <div class="guest-slide-collection-list-wrapper w-dyn-list">
-                                        <div role="list" class="guest-slide-collection-list w-dyn-items">
-                                            <div role="listitem" class="guest-slide-collection-item w-dyn-item">
                                                 <div data-w-id="b2cc20c7-bfc6-8ffa-8e26-2f01fef87c6a" class="guest-item">
                                                     <a aria-label="link" href="#" class="guest-image-wrap w-inline-block">
                                                         <img
@@ -1054,6 +1013,46 @@
                                                             >
                                                         </a>
                                                         <a href="mailto:deepak@svpnpa.gov.in" target="_blank" class="social-link w-inline-block">
+                                                            <img
+                                                                src="imgs/mail.webp"
+                                                                loading="eager"
+                                                                alt="Mail icon"
+                                                                class="social-icon"
+                                                            >
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="guest-slide w-slide">
+                                    <div class="guest-slide-collection-list-wrapper w-dyn-list">
+                                        <div role="list" class="guest-slide-collection-list w-dyn-items">
+                                            <div role="listitem" class="guest-slide-collection-item w-dyn-item">
+                                                <div data-w-id="bc8187a3-6429-ef99-f235-ab725282be00" class="guest-item">
+                                                    <a aria-label="link" href="#" class="guest-image-wrap w-inline-block">
+                                                        <img
+                                                            alt=""
+                                                            loading="eager"
+                                                            style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
+                                                            src="imgs/unknown.png"
+                                                            sizes="(max-width: 479px) 149.99998474121094px, (max-width: 767px) 31vw, (max-width: 991px) 179.994140625px, 219.99122619628906px"
+                                                            srcset="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnpH8yq1vrLIpt1g0QG-pW6lId-vQ1nOEy4Q&s 500w, https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnpH8yq1vrLIpt1g0QG-pW6lId-vQ1nOEy4Q&s 770w"
+                                                            class="guest-image"
+                                                        >
+                                                    </a>
+                                                    <a href="#" class="guest-title">Ms. Kezang Dema</a>
+                                                    <div class="guest-social-item-wrap">
+                                                        <a href="tel:+91 7980108757" target="_blank" class="social-link w-inline-block">
+                                                            <img
+                                                                src="imgs/call_icon.png"
+                                                                loading="eager"
+                                                                alt="Call icon"
+                                                                class="social-icon"
+                                                            >
+                                                        </a>
+                                                        <a href="mailto:kezangd@mfa.gov.bt" target="_blank" class="social-link w-inline-block">
                                                             <img
                                                                 src="imgs/mail.webp"
                                                                 loading="eager"
